--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,17 @@
 .red {
     color:red
 }
+
+.mokuzi{
+    margin-left: 40%;
+    margin-right: 40%;
+    background-color: #e7e7e7;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
