--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,15 @@ h1 {
 h2 {
     text-align: center;
 }
+
+table {
+    text-align: center;
+    align-self: center;
+    background-color: #e7e7e7;
+}
+
+content {
+    align-self: center;
+    :center
+}
+
